--- a/app/views/meal_plans/edit.html.erb
+++ b/app/views/meal_plans/edit.html.erb
@@ -1,4 +1,4 @@
-<h1>Editing meal_plan</h1>
+<h1>Editing <%= @meal_plan.name %></h1>
 
 <% form_for(@meal_plan) do |f| %>
   <%= f.error_messages %>
@@ -6,10 +6,6 @@
   <p>
     <%= f.label :name %><br />
     <%= f.text_field :name %>
-  </p>
-  <p>
-    <%= f.label :number %><br />
-    <%= f.text_field :number %>
   </p>
   <p>
     <%= f.submit 'Update' %>
