--- a/app/views/meal_plans/index.html.erb
+++ b/app/views/meal_plans/index.html.erb
@@ -6,9 +6,14 @@
 
 		<p class="meta"><span class="date"> <%= meal_plan.created_at.asctime %> 
 		
-		<div class="new_mealplan_wrapper">				
-			<h2 class="mealplan_index_title"><%= link_to meal_plan.name, meal_plan %> </h2>
-			<%= link_to '<span> Destroy </span>', meal_plan, :confirm => 'Are you sure?', :method => :delete, :class=>'squarebutton' %>
+		<div class="mealplan_index_wrapper">				
+			<div class="mealplan_index_titledescript">
+				<h2 class="mealplan_index_title"><%= link_to meal_plan.name, meal_plan %> </h2>
+			</div>
+			
+			<div class="mealplan_index_options">
+				<%= link_to '<span> Destroy </span>', meal_plan, :confirm => 'Are you sure?', :method => :delete, :class=>'squarebutton' %>
+			</div>
 		</div>
 	</div>   
 	
