Changed header wrapper name

--- a/app/views/layouts/recipes.html.erb
+++ b/app/views/layouts/recipes.html.erb
@@ -34,7 +34,7 @@
 				</li>
 				<li>
 				<% if current_user %>
-					<%= link_to 'My recipe lists', :controller => 'meal_plans' %>
+					<%= link_to 'My meal plans', :controller => 'meal_plans' %>
 				<% end %>
 				</li>
 				
