--- a/app/views/layouts/calendar.html.erb
+++ b/app/views/layouts/calendar.html.erb
@@ -32,7 +32,7 @@
 				</li>
 				<li>
 				<% if current_user %>
-					<%= link_to 'My recipe lists', :controller => 'meal_plans' %>
+					<%= link_to 'My meal plans', :controller => 'meal_plans' %>
 				<% end %>
 				</li>
 				
