- Added MealPlan Description - Fixed flash notifications for search

--- a/app/views/meal_plans/new.html.erb
+++ b/app/views/meal_plans/new.html.erb
@@ -9,7 +9,12 @@
 		    <h2> New meal plan name </h2>
 		    <%= f.text_field :name %>
 		  </p>
-		
+		  
+		  <p>
+		  	<h2> Meal Plan Description </h2>
+		  	<%= f.label :description %>
+		  	<%= f.text_field :description %>
+		  </p>
 		  <p>
 		    <%= f.submit 'Create' %>
 		  </p>
