--- a/app/views/meal_plans/edit.html.erb
+++ b/app/views/meal_plans/edit.html.erb
@@ -7,6 +7,13 @@
     <%= f.label :name %><br />
     <%= f.text_field :name %>
   </p>
+  
+  <p>
+  	<h2> Meal Plan Description </h2>
+  	<%= f.label :description %>
+   	<%= f.text_field :description %>
+  </p>
+  
   <p>
     <%= f.submit 'Update' %>
   </p>
