--- a/app/views/layouts/recipes.html.erb
+++ b/app/views/layouts/recipes.html.erb
@@ -34,7 +34,7 @@
 				</li>
 				<li>
 				<% if current_user %>
-					<%= link_to 'My meal plans', :controller => 'meal_plans' %>
+					<%= link_to 'My meal plans', :controller => 'meal_plans' , :action => 'showMyMealPlans', :user => current_user, :id => '2' %>
 				<% end %>
 				</li>
 				
