--- a/app/views/calendar/index.html.erb
+++ b/app/views/calendar/index.html.erb
@@ -3,7 +3,30 @@
 
 <h1 id="calendar_title">Calendar</h1>
 
-<%= event_calendar %>
+<%= calendar event_calendar_opts do |args|
+      event = args[:event]
+	  start_at = event.start_at
+	  month = start_at.month.to_i
+	  date = start_at.day.to_i
+	  year = start_at.year.to_i
+	  recipe = Recipe.find_by_title(event.name)
+	  recipe_id = recipe.id
+	  blah = 'blah blah'
+      html = %(
+	 
+	 <div style="line-height:11px; white-space:normal; height:auto; width:60px; float:left;">
+	 <a href="/calendars/#{recipe_id}" title="#{h(event.name)}" >#{h(event.name)}</a>
+	 </div>
+	 
+	 
+	 <div style="height:auto; width:12px; float:right">
+	 <a href="/users/0/recipe/#{recipe_id}/#{year}/#{month}/#{date}" title="Remove">X</a>  
+	 </div>
+	  
+	  )
+      html
+    end	%>
+
 
 <div class="grocery_list_div">
 <%= link_to '<span> Show Grocery List </span>', {:controller => "recipe_lists", :action => "groceryList", :id => @recipe_list.id, :user => current_user}, :class=>'squarebutton' %>
