--- a/public/stylesheets/event_calendar.css
+++ b/public/stylesheets/event_calendar.css
@@ -78,6 +78,7 @@
   left: 0;
   width: 100%;
   overflow: hidden;
+  height: 100%;
 }
 
 /* Background */
@@ -141,6 +142,7 @@ a.ec-day-link {
   vertical-align: top;
   padding-right: 1px;
   padding-left: 2px;
+
 }
 
 .ec-event-cell a {
@@ -157,7 +159,8 @@ a.ec-day-link {
 .ec-event {
   color: white;
   padding-right: 1px;
-  padding-left: 11px;
+  padding-left: 2px;
+  padding-bottom: 2px;
   -webkit-border-radius: 3px;
   -khtml-border-radius: 3px;
   -moz-border-radius: 3px;
