Centered update button for edit recipe page

--- a/app/views/recipes/edit.html.erb
+++ b/app/views/recipes/edit.html.erb
@@ -67,7 +67,9 @@
 	  <br>
 	  <%= button_to_function "Add Ingredient", "$$('.hidden')[0].removeClassName('hidden').show()" %>
 	  <p>
-	    <%= f.submit 'Update' %>
+	    	<div style="padding-top:10px; text-align:center;">
+    			<%= f.submit 'Upload Recipe' %>
+		</div>
 	  </p>
  <% end %>
 
