calnedar bug fix

--- a/app/views/calendar/index.html.erb
+++ b/app/views/calendar/index.html.erb
@@ -15,7 +15,7 @@
       html = %(
 	 
 	 <div style="line-height:11px; white-space:normal; height:auto; width:60px; float:left;">
-	 <a href="/calendars/#{recipe_id}" title="#{h(event.name)}" >#{h(event.name)}</a>
+	 <a href="/recipes/#{recipe_id}" title="#{h(event.name)}" >#{h(event.name)}</a>
 	 </div>
 	 
 	 
