--- a/app/views/recipes/new.html.erb
+++ b/app/views/recipes/new.html.erb
@@ -65,7 +65,7 @@
 		
   <%= link_to_function "<span> Add Ingredient </span>", "$$('.hidden')[0].removeClassName('hidden').show();",:class=>'squarebutton' %>
   <p>
-  	<div style="padding-top:10px; text-align:center;">
+  	<div class="upload_recipe">
     <%= f.submit 'Upload Recipe' %>
 	</div>
   </p>
