--- a/app/views/recipes/edit.html.erb
+++ b/app/views/recipes/edit.html.erb
@@ -67,7 +67,7 @@
 	  <br>
 	  <%= button_to_function "Add Ingredient", "$$('.hidden')[0].removeClassName('hidden').show()" %>
 	  <p>
-	    	<div style="padding-top:10px; text-align:center;">
+	    	<div class="upload_recipe">
     			<%= f.submit 'Upload Recipe' %>
 		</div>
 	  </p>
