--- a/app/views/calendar/index.html.erb
+++ b/app/views/calendar/index.html.erb
@@ -30,6 +30,6 @@
 
 <div class="grocery_list_div">
 <%= link_to '<span> Show Grocery List </span>', {:controller => "recipe_lists", :action => "groceryList", :id => @recipe_list.id, :user => current_user}, :class=>'squarebutton' %>
-<%= link_to '<span> Make Meal Plan! </span>', {:controller => "meal_plans", :action => "new", :id => @recipe_list.id, :user => current_user}, :class=>'squarebutton' %>
+<%= link_to '<span> Make Meal Plan! </span>', {:controller => "meal_plans", :id => @recipe_list.id, :action => "newHelper"}, :class=>'squarebutton' %>
 </div>
 
