--- a/app/views/recipes/show.html.erb
+++ b/app/views/recipes/show.html.erb
@@ -67,8 +67,9 @@
 			<%= render :partial => 'reviews/review', :object => review %>
 		<% end %>
 		</span>
-		 
-		<%= link_to 'Edit Recipe', edit_recipe_path(@recipe) %> |
+		<% if current_user.id == @recipe.user_id%>
+			<%= link_to 'Edit Recipe', edit_recipe_path(@recipe) %> |
+		<% end %>
 		<%= link_to 'Back to Recipes', recipes_path %> |
 		<%= link_to 'Add Review', new_review_path(:id=>@recipe.id)%> |
 		<% if current_user %>
