--- a/public/stylesheets/base.css
+++ b/public/stylesheets/base.css
@@ -402,9 +402,7 @@ hr { display: none; }
 }
 
 .week_recipe_title a{
-	font-weight:bold;
-	color: #666666;
-	font-size:1.5em;
+	font-size:15px;
 }
 
 .week_recipe_description {
@@ -943,4 +941,9 @@ padding-bottom:10px;
 
 .ingredients_form{
 	overflow:hidden;
+}
+
+.upload_recipe{
+	padding-top:30px; 
+	text-align:center;
 }
