--- a/app/views/recipes/edit.html.erb
+++ b/app/views/recipes/edit.html.erb
@@ -68,7 +68,7 @@
 	  <%= button_to_function "Add Ingredient", "$$('.hidden')[0].removeClassName('hidden').show()" %>
 	  <p>
 	    	<div style="padding-top:10px; text-align:center;">
-    			<%= f.submit 'Upload Recipe' %>
+    			<%= f.submit 'Save changes' %>
 		</div>
 	  </p>
  <% end %>
