--- a/app/views/meal_plans/show.html.erb
+++ b/app/views/meal_plans/show.html.erb
@@ -1,5 +1,5 @@
 <h1 style="padding-bottom:5px;"> <%=h @meal_plan.name %> </h1>
-<h3>Meal Plan Description: <%=h @meal_plan.description %></h3>  
+<h3><%=h @meal_plan.description %></h3>  
 <h3> Number of recipes: <%=h @meal_plan.number %> </h3>
 
 
