--- a/app/views/recipes/edit.html.erb
+++ b/app/views/recipes/edit.html.erb
@@ -54,9 +54,9 @@
 	<div class="ingredients_options">
 
 	  <%= i.hidden_field :_destroy %>
-	  <%= button_to_function "Delete", 
+	  <%= link_to_function "<span> Delete </span>", 
 		"$('recipe_ingredient_amounts_attributes_#{ingredient_amount_html_id}__destroy').setValue('1');
-		$('ingredient_amount_#{ingredient_amount_html_id}').hide();" %>
+		$('ingredient_amount_#{ingredient_amount_html_id}').hide();", :class=>'squarebutton' %>
    </div>
    		</div>
    </span>
@@ -65,13 +65,13 @@
 	  <% ingredient_amount_html_id += 1 %>
 	  <% end %>
 	  <br>
-	  <%= button_to_function "Add Ingredient", "$$('.hidden')[0].removeClassName('hidden').show()" %>
-	  <p>
-	    	<div class="upload_recipe">
-    			<%= f.submit 'Upload Recipe' %>
-		</div>
-	  </p>
- <% end %>
+	  <%= link_to_function "<span> Add Ingredient </span>", "$$('.hidden')[0].removeClassName('hidden').show()", :class=>'squarebutton' %>
+  <p>
+  	<div class="upload_recipe">
+    <%= link_to_function "<span> Upload Recipe </span>", "$('edit_recipe_#{@recipe.id}').submit();", :class=>'upload_recipe_button'%>
+	</div>
+  </p>
+<% end %>
 
 <%= link_to 'Show', @recipe %> |
 <%= link_to 'Back', recipes_path %>
