--- a/app/views/layouts/recipes.html.erb
+++ b/app/views/layouts/recipes.html.erb
@@ -20,12 +20,7 @@
 				<li><%= link_to 'Home', recipes_path %></li>
 				<li>
 				<% if current_user %>
-					<%= link_to 'Upload Recipe', new_recipe_path %>
-				<% end %>	
-				</li>
-				<li>
-				<% if current_user %>
-					<%= link_to 'Recipe list', :controller => 'calendar'%>
+					<%= link_to 'My recipe list', :controller => 'calendar'%>
 				<% else %>
 					<%= link_to 'Recipe list', login_path %>
 				<% end %>		
@@ -41,7 +36,11 @@
 					<%= link_to 'My meal plans', :controller => 'meal_plans' , :action => 'showMyMealPlans', :user => current_user, :id => '2' %>
 				<% end %>
 				</li>
-				
+				<li>
+				<% if current_user %>
+					<%= link_to 'Upload Recipe', new_recipe_path %>
+				<% end %>	
+				</li>
 				<li>
 					<% if current_user %>
 						<%= link_to "Edit Profile", edit_user_path(:current) %>
