--- a/public/stylesheets/base.css
+++ b/public/stylesheets/base.css
@@ -944,3 +944,13 @@ padding-bottom:10px;
 .ingredients_form{
 	overflow:hidden;
 }
+
+form.rating_ballot p input.rating_button { display: none; }
+form.rating_ballot p label.rating { cursor: pointer; }
+label.rating { display: block; height: 16px; width: 16px; float: left; }
+label.rating span { display: none; }
+label.rating {background:url(../images/star.gif) no-repeat 0 0px;}
+form.rating_ballot p label.rating.glow {background-position:0 -16px;}
+label.rating.bright {background-position:0 -32px;}
+
+
