--- a/public/stylesheets/base.css
+++ b/public/stylesheets/base.css
@@ -1028,3 +1028,25 @@ a.upload_recipe_button :active span {
 	text-align:right;
 }
 
+/* Reviews */
+
+.commentbox{
+background-color: #ececec;
+width: 450px;
+padding: 10px;
+}
+
+.commentfooter{
+background: url(../images/arrow.gif) 20px 0 no-repeat; /*20px 0 equals horizontal and vertical position of arrow. Adjust as desired (ie: 20px -5px).*/
+padding-left: 58px;
+padding-top: 1px;
+margin-bottom: 2em;
+font-size: 90%;
+color: #4A4A4A;
+}
+
+.review_wrapper{
+	margin-bottom: 45px;
+	padding-bottom: 10px;
+	border-bottom: 1px solid #E0E0E0;
+}
