--- a/public/stylesheets/base.css
+++ b/public/stylesheets/base.css
@@ -932,8 +932,8 @@ padding-bottom:10px;
 	padding-top:5px;
 }
 
-.mealplan_index_descript{
-	padding-top:5px;
+.mealplan_index_descrip{
+	padding-top:10px;
 	font-size:1.25em;
 }
 
@@ -1049,4 +1049,80 @@ color: #4A4A4A;
 	margin-bottom: 45px;
 	padding-bottom: 10px;
 	border-bottom: 1px solid #E0E0E0;
+}
+
+.browse_other_link{
+	float:right;
+}
+
+/* Home tabs */
+
+.ubercolortabs{
+padding: 0;
+width: 100%;
+overflow: hidden;
+background: transparent;
+}
+
+.ubercolortabs ul{
+font: bold 11px Arial, Verdana, sans-serif;
+margin: 0;
+padding: 0;
+list-style: none;
+}
+
+.ubercolortabs li{
+display: inline;
+margin: 0 2px 0 0;
+padding: 0;
+text-transform: uppercase;
+}
+
+
+.ubercolortabs a{
+float: left;
+color: white;
+background: #FF9840 url(media/roundleft.gif) no-repeat left top; /*default background color of tabs, left corner image*/
+margin: 0 2px 0 0;
+padding: 0 0 1px 3px;
+text-decoration: none;
+letter-spacing: 1px;
+}
+
+.ubercolortabs a span{
+float: left;
+display: block;
+background: transparent url(media/roundright.gif) no-repeat right top; /*right corner image*/
+padding: 7px 9px 3px 6px;
+cursor: pointer;
+}
+
+.ubercolortabs a span{
+float: none;
+}
+
+
+.ubercolortabs a:hover, .ubercolortabs .selected{
+background-color: #FF7600; /*background color of tabs onMouseover*/
+color: white;
+}
+
+.ubercolortabs a:hover span{
+background-color: transparent;
+}
+
+
+.ubercolordivider{ /*CSS for horizontal line.*/
+clear: both;
+padding: 0;
+width: 100%;
+height: 5px;
+line-height: 5px;
+background: #FF9840; /*background color of horizontal line*/
+border-top: 1px solid #fff; /*Remove this to remove border between bar and tabs*/
+}
+
+/* Misc */
+h1.welcome_title{
+	padding-bottom:10px;
 }
