Modified calendar header to match recipes layout header

--- a/app/views/layouts/calendar.html.erb
+++ b/app/views/layouts/calendar.html.erb
@@ -16,10 +16,9 @@
 		<div id="menu">
 			<ul>
 				<li><%= link_to 'Home', recipes_path %></li>
-				<li><%= link_to 'Upload Recipe', new_recipe_path %></li>
 				<li>
 				<% if current_user %>
-					<%= link_to 'Recipe list', :controller => 'calendar'%>
+					<%= link_to 'My recipe list', :controller => 'calendar'%>
 				<% else %>
 					<%= link_to 'Recipe list', login_path %>
 				<% end %>		
@@ -32,10 +31,14 @@
 				</li>
 				<li>
 				<% if current_user %>
-					<%= link_to 'My meal plans', :controller => 'meal_plans' %>
+					<%= link_to 'My meal plans', :controller => 'meal_plans' , :action => 'showMyMealPlans', :user => current_user, :id => '2' %>
 				<% end %>
 				</li>
-				
+				<li>
+				<% if current_user %>
+					<%= link_to 'Upload Recipe', new_recipe_path %>
+				<% end %>	
+				</li>
 				<li>
 					<% if current_user %>
 						<%= link_to "Edit Profile", edit_user_path(:current) %>
